[package]
name = "k"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
rand_xorshift = "0.3.0"
rand_core = "0.6.4"

[package.metadata.bootimage]
test-success-exit-code = 33
test-timeout = 300
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
